testdata/parser/positive/19.pdl
#version 100

composite main() {}

primitive example(int a) {
    synchronous {
        loop: {
            goto loop; // allowed
        }
    }
}