testdata/parser/negative/31.pdl
#version 100

primitive main(int a) {
    while (true) {
        synchronous {
            break; // not allowed
        }
    }
}